alignment and popup bug fixes

--- a/assets/pages/course/course.css
+++ b/assets/pages/course/course.css
@@ -327,3 +327,6 @@
     overflow-wrap: break-word;
     overflow: hidden;
 }
+#mAlert{
+    top:150px;
+}
