--- a/assets/pages/courses/courses.css
+++ b/assets/pages/courses/courses.css
@@ -134,7 +134,7 @@
     position: fixed !important;
     right: 0px !important;
     left: unset !important;
-    top: 120px;
+    top: 0px;
 }
 .dz-preview{
     width: 48.5%;
